# ragpicker

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yaml  pypi.yaml  python-lint.yaml  python-test.yaml
docs/: generating.md  index.md  versions.md
generating/: index.html
scripts/: generate_skill.py
src/ragpicker/: generator.py
src/ragpicker/template/: README.md
src/ragpicker/template/[dbname]-haiku-rag/: SKILL.md
src/ragpicker/template/[dbname]-haiku-rag/scripts/: haiku_rag.py
template/[dbname]-haiku-rag/: SKILL.md
template/[dbname]-haiku-rag/scripts/: haiku_rag.py
tests/: test_generate_skill.py
tests/unit/: test_generator.py
versions/: index.html
