[project]
name = "ragpicker"
version = "0.1.0"
description = "Generate filesystem-based agentskills.io skill around a haiku-rag RAG database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylance",
    "packaging",
]

[project.scripts]
ragpicker = "ragpicker.generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragpicker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "haiku-rag-slim==0.48.1",
]
